Fix 서브 나브 z-index

--- a/frontend/src/components/widgets/css/MainSubNav.scss
+++ b/frontend/src/components/widgets/css/MainSubNav.scss
@@ -21,7 +21,7 @@
   height: 50px;
   position: sticky;
   top: 85px;
-  z-index: 50;
+  z-index: 10;
   background-color: #fff;
 
   .nav__container {
